[package]
name = "gamma-derive"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Procedural macro for deriving the Event trait with a stable, layout-sensitive type identifier"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["derive", "full"] }

[dev-dependencies]
gamma-core = { path = "../gamma-core" }
